--- a/index.html
+++ b/index.html
@@ -11,21 +11,55 @@
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <!-- main css -->
     <link rel="stylesheet" href="./css/style.css" />
+    <!-- jquery -->
+    <script src="./js/jquery-3.7.1.min.js" defer></script>
+    <!-- bootstarap js -->
+    <script src="./js/bootstrap.bundle.min.js" defer></script>
+    <!-- main js -->
+    <script src="./js/main.js" defer></script>
   </head>
   <body data-bs-spy="scroll" data-bs-target="#nav">
     <div
       class="position-fixed bottom-0 end-0"
       id="btnUp"
-      style="display: block"
     >
-      <a href="#home" class="main-color"
+      <button class="btn main-color"
         ><i class="fas fa-arrow-alt-circle-up fa-2xl"></i
-      ></a>
+      ></button>
     </div>
-    <nav
-      id="nav"
-      class="navbar navbar-expand-lg fixed-top bg-black navbar-dark bg-opacity-50"
-    >
+    <div class="loading">
+      <div class="spinner">
+        <div class="rect1"></div>
+        <div class="rect2"></div>
+        <div class="rect3"></div>
+        <div class="rect4"></div>
+        <div class="rect5"></div>
+      </div>
+    </div>
+    <div>
+      <aside id="sideBar">
+        <div class="sideBox">
+          <h4>Customize Color</h4>
+          <hr />
+
+          <h6>Choose Color:</h6>
+
+          <span class="boxColor"></span>
+          <span class="boxColor"></span>
+          <span class="boxColor"></span>
+          <span class="boxColor"></span>
+          <span class="boxColor"></span>
+
+          <h6>Choose background:</h6>
+          <span class="boxbg"><img src="./images/bggg.jpg" alt="bg" class="w-100"></span>
+          <span class="boxbg"><img src="./images/bg.jpg" alt="bg" class="w-100"></span>
+          <span class="boxbg"><img src="./images/bg6.jpg" alt="bg" class="w-100"></span>
+          <span class="boxbg"><img src="./images/6.jpg" alt="bg" class="w-100"></span>
+        </div>
+        <i id="icon" class="fas fa-gear"></i>
+      </aside>
+    </div>
+    <nav id="nav" class="navbar p-0 navbar-expand-lg fixed-top navbar-dark">
       <div class="container">
         <a class="navbar-brand fs-2" href="index.html">Osaka</a>
         <button
@@ -368,7 +402,11 @@
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
           </div>
 
-          <ul class="nav nav-pills mb-3 d-flex justify-content-center" id="pills-tab" role="tablist">
+          <ul
+            class="nav nav-pills mb-3 d-flex justify-content-center"
+            id="pills-tab"
+            role="tablist"
+          >
             <li class="nav-item" role="presentation">
               <button
                 class="nav-link active text-uppercase"
@@ -923,8 +961,5 @@
         2023 © Created BY <span class="main-color">KAWTHER MOHAMED</span>
       </p>
     </footer>
-
-    <!-- bootstarap js -->
-    <script src="./js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
